# Vide

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
bindings/vyde/py/: examples-subtitles.py
bindings/vyde/py/src/: globals.py  render.py  std.py  timing.py
bindings/vyde/rs/: Cargo.toml
crates/vide_ffmpeg/: Cargo.toml
crates/vide_ffmpeg/src/: lib.rs  quick_export.rs
crates/vide_lib/: Cargo.toml
crates/vide_lib/src/: clip.rs  effect.rs  io.rs  lib.rs  render.rs  sequence.rs  video.rs
crates/vide_lib/src/api/: animation.rs  color.rs  instanced_mesh.rs  mesh.rs  mod.rs  rect.rs  rect.wgsl  shader.rs  transform.rs  video.rs
examples/animation/: Cargo.toml
examples/animation/src/: main.rs
examples/audio_visualizer/: Cargo.toml
examples/audio_visualizer/src/: main.rs
examples/easing/: Cargo.toml
examples/easing/src/: main.rs
vide/: Cargo.toml
vide/src/: lib.rs
