[workspace]
members = [
    "vide",
    "crates/vide_lib",
    "crates/vide_ffmpeg",
    "examples/animation",
    "examples/easing",
    "examples/audio_visualizer",
]
resolver = "2"


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
debug = 0
